--- a/bigHouses/templates/account_login.html
+++ b/bigHouses/templates/account_login.html
@@ -18,8 +18,8 @@
 
         <!-- Include a link to /explore/ and /users/{logname}/. -->
         <div class="header-right">
-            <a href="/explore/" class="nav-link">explore</a>
-            <a href="/accounts/login/" class="nav-link active">login</a>
+            <a href="/explore/" class="nav-link">Explore</a>
+            <a href="/accounts/login/" class="nav-link active">Log In</a>
         </div>
     </header>
 
