--- a/bigHouses/templates/account_password.html
+++ b/bigHouses/templates/account_password.html
@@ -15,7 +15,7 @@
 
         <!-- Include a link to /explore/ and /users/{logname}/. -->
         <div class="header-right">
-            <a href="/explore/" class="nav-link">explore</a>
+            <a href="/explore/" class="nav-link">Explore</a>
             <a href="/users/{{ logname }}/" class="nav-link">{{ logname }}</a>
         </div>
     </header>
