--- a/bigHouses/templates/account_create.html
+++ b/bigHouses/templates/account_create.html
@@ -18,8 +18,8 @@
 
         <!-- Include a link to /explore/ and /users/{logname}/. -->
         <div class="header-right">
-            <a href="/explore/" class="nav-link">explore</a>
-            <a href="/accounts/login/" class="nav-link">login</a>
+            <a href="/explore/" class="nav-link">Explore</a>
+            <a href="/accounts/login/" class="nav-link">Log In</a>
         </div>
     </header>
     <main class="login-container">
